-limit number of blog items on homepage and make sure they are only the blog type -add a bit of padding to bottom of news element - add spacing around what-is-hapide on register page, if users end up there somehow - check internationalization on accelerator and users plugins

--- a/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
+++ b/app/View/Themed/Accelerator/webroot/css/sass/screen.scss
@@ -576,6 +576,7 @@ div.main {
 
 .news {
   @extend .column-wrapper;
+  padding-bottom: 1em;
   article {
     @include span-columns(7 omega,7);
     .image {
